# spotimusic

./: .gitignore  README.md  app.py  client.py  main.py  pyproject.toml
app/: __init__.py  app.py  client.py  config.py  icons.py  util.py  workers.py
app/core/: base_entity.py  client.py  config.py  utils.py  workers.py
app/core/entities/: auth.py  settings.py
app/database/: __init__.py  database.py  entity.py  migration.py  models.py
app/database/migrations/: 000_migrations.py  001_auth.py  002_settings.py
app/forms/: __init__.py  auth.py  base.py  current_track.py  media_control.py  multilabel.py  playlist.py  settings.py  track_list.py
app/layouts/: __init__.py  app.py  auth.py  debug.py  media_list.py  settings.py
app/layouts/forms/: __init__.py  current_track.py  media_control.py  playlist.py  topbar_medialist.py  tracklist.py
app/layouts/widgets/: __init__.py  delitimer.py  widgets.py
app/models/: Auth.py  Migration.py  Settings.py  Sqlite.py  __init__.py
auth/: app.py
auth_server/: app.py  server.py
gui/: app.py  client.py
gui/forms/: __init__.py  auth.py  base.py  playlist.py
layouts/: __init__.py  base.py
temp/config/: oauth.json
