[tool.poetry]
name = "tunebin"
version = "0.1.0"
description = ""
authors = ["Alym Abdullayev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.42.0"
spotipy = "^2.23.0"
requests = "^2.31.0"
pytube = "^15.0.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
PyQt6 = "^6.6.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
